--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     "십간_입체방위 보름달.png",
     "십간_입체방위 보름달2.png",
     "십간_입체방위 하현달.png",
-    "십간_입체방위 그믐달.png"
+    "십간_입체방위 그믐달.png",
+    "십간_입체방위 합삭달.png"
   ];
   let currentIndex = 0;
 
@@ -108,3 +109,4 @@
 
 </body>
 </html>
+
